# offline-chess-puzzles

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  clippy.toml  settings.json
.cargo/: config.toml
.github/workflows/: build.yml
include/translations/en-US/: ocp.ftl
include/translations/es/: ocp.ftl
include/translations/fr/: ocp.ftl
include/translations/nl/: ocp.ftl
include/translations/pt-BR/: ocp.ftl
src/: config.rs  db.rs  download_db.rs  eval.rs  export.rs  lang.rs  main.rs  models.rs  openings.rs  puzzles.rs  schema.rs  search_tab.rs  settings.rs  styles.rs
translations/en-US/: ocp.ftl
translations/nl/: ocp.ftl
