[package]
name = "offline-chess-puzzles"
version = "2.5.15"
edition = "2024"
authors = ["brianch <brianch@users.noreply.github.com>", "github.com/pepa65"]
description = "Tool to view and solve puzzles from the lichess puzzle database"
repository = "https://github.com/pepa65/offline-chess-puzzles"
readme = "README.md"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["svg", "tokio", "lazy", "advanced"] }
iced_aw = { version = "0", default-features = false, features = ["tabs"] }
#iced_drop = {git = "https://github.com/jhannyj/iced_drop.git", rev="d259ec4dff098852d995d3bcaa5551a88330636f"}
iced_drop = "0"
rand = "0"
chess = "3.2.0"
csv = "1.3.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["process", "io-std", "io-util", "sync"] }
reqwest = "0.12.12"
zstd = "0.13.2"
rodio = { version = "0.20.1", default-features = false, features = ["vorbis"] }
fluent-bundle = "0"
intl-memoizer = "0.5.2"
once_cell = "1.20.2"
unic-langid = { version = "0.9.5", features = ["macros"] }
diesel = { version = "2", features = ["sqlite"] }
dotenvy = "0.15.7"
lopdf = "0"
open = "5.3.2"
rfd = "0.15.2"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
