[package]
name = "offline-chess-puzzles"
version = "2.9.15"
edition = "2024"
authors = ["brianch <brianch@users.noreply.github.com>", "github.com/pepa65"]
description = "GUI to solve puzzles from the lichess puzzle database"
repository = "https://github.com/pepa65/offline-chess-puzzles"
readme = "README.md"
license = "MIT"
keywords = ["chess", "gui", "puzzle-game"]
categories = ["games"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
rfd = {version = "0.17.1", default-features = false, features = ["gtk3"] }
iced = { version = "0.14", default-features = false, features = ["svg", "tokio", "lazy", "advanced", "advanced-shaping"] }
iced_aw = { version = "0.13", default-features = false, features = ["tabs"] }
#iced_drop = {git = "https://github.com/pml68/iced_drop.git", branch="0.14"}
iced_drop = "0.2.0"
rand = "0.9"
chess = "3.2.0"
csv = "1.3.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["process", "io-std", "io-util", "sync"] }
reqwest = "0.12.12"
zstd = "0.13.2"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "lewton"] }
fluent-bundle = "0"
intl-memoizer = "0.5.2"
once_cell = "1.20.2"
unic-langid = { version = "0.9.5", features = ["macros"] }
diesel = { version = "2.3.5", features = ["sqlite"] }
lopdf = "0"
open = "5.3.2"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
include_dir = "0.7.4"
dirs-next = "2.0.0"
chrono = "0.4.42"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
